Weekly Calander Layout Ready

--- a/SmoothSlidingFragmentTransaction/app/src/main/res/layout/activity_main.xml
+++ b/SmoothSlidingFragmentTransaction/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+<!--    <androidx.viewpager2.widget.ViewPager2-->
+<!--        android:id="@+id/vpWeeklyCalander"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
+
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView"
-        android:name="com.example.smoothslidingfragmenttransaction.fragments.Fragment1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
