--- a/SmoothSlidingFragmentTransaction/app/src/main/res/layout/fragment_2.xml
+++ b/SmoothSlidingFragmentTransaction/app/src/main/res/layout/fragment_2.xml
@@ -1,26 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00ff00"
     tools:context=".fragments.Fragment2">
 
-    <TextView
-        android:id="@+id/tvText"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvWeekDaysContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="@string/hello_blank_fragment"
-        android:textColor="@color/black"
-        android:textSize="20dp"/>
+        android:layout_height="70dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-    <Button
-        android:id="@+id/btnMove"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Move to Fragment 3"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="400dp"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvWeeklySlots"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="7"
+        android:layout_marginTop="2dp"
+        android:background="#A3A3A3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rvWeekDaysContainer" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
