--- a/SmoothSlidingFragmentTransaction/app/src/main/res/layout/fragment_2.xml
+++ b/SmoothSlidingFragmentTransaction/app/src/main/res/layout/fragment_2.xml
@@ -22,7 +22,7 @@
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="7"
         android:layout_marginTop="2dp"
-        android:background="#A3A3A3"
+        android:background="#DFDEDE"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
