--- a/SmoothSlidingFragmentTransaction/app/src/main/res/layout/viewholder_day_time_slot_layout.xml
+++ b/SmoothSlidingFragmentTransaction/app/src/main/res/layout/viewholder_day_time_slot_layout.xml
@@ -4,8 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:background="#ff0000"
-    android:layout_margin="1dp">
+    android:layout_marginRight="1dp"
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/tvTimeSlot"
@@ -14,8 +14,8 @@
         android:text="00:00"
         android:textColor="@color/black"
         android:textSize="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
