--- a/SmoothSlidingFragmentTransaction/app/src/main/res/layout/viewholder_header_week_day_and_date.xml
+++ b/SmoothSlidingFragmentTransaction/app/src/main/res/layout/viewholder_header_week_day_and_date.xml
@@ -8,6 +8,7 @@
     android:background="#EEF1F4">
 
     <TextView
+        android:id="@+id/tvDay"
         android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -18,6 +19,7 @@
         android:gravity="center"/>
 
     <TextView
+        android:id="@+id/tvDate"
         android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -27,6 +29,7 @@
         android:gravity="center"/>
 
     <View
+        android:id="@+id/vBottomLine"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginHorizontal="2dp"
